feat(pack): add custom window icon support for title bar and taskbar

--- a/examples/pack-example.toml
+++ b/examples/pack-example.toml
@@ -1,10 +1,11 @@
 # AuroraView 打包配置示例
 # ============================================================================
-# 此配置展示了两个用户需求的功能：
-#   1. 自定义应用图标 (Windows .ico 格式)
+# 此配置展示了三个用户需求的功能：
+#   1. 自定义 Windows 可执行文件图标 (.ico 格式)
 #   2. 禁用控制台黑框 (console = false)
+#   3. 自定义窗口标题栏/任务栏图标 (PNG 格式)
 #
-# 感谢用户反馈这两个实用功能！
+# 感谢用户反馈这些实用功能！
 # ============================================================================
 #
 # 使用方法:
@@ -57,6 +58,20 @@ start_position = "center"
 [bundle]
 # 应用图标（PNG 格式，用于非 Windows 平台）
 icon = "./assets/my-app-icon.png"
+
+# ┌─────────────────────────────────────────────────────────────────────────┐
+# │ 功能 3: 自定义窗口图标（标题栏/任务栏图标）                              │
+# │                                                                         │
+# │ 说明: 设置应用运行时窗口标题栏和任务栏显示的图标                         │
+# │ 格式: 必须是 PNG 格式                                                   │
+# │ 推荐尺寸: 32x32 或 64x64 像素                                           │
+# │                                                                         │
+# │ 注意: 这与 Windows .ico 图标不同！                                      │
+# │   - window_icon: 运行时窗口标题栏/任务栏图标 (PNG)                      │
+# │   - [bundle.windows].icon: Windows 资源管理器中显示的图标 (ICO)         │
+# └─────────────────────────────────────────────────────────────────────────┘
+window_icon = "./assets/my-app-icon.png"
+
 # 应用标识符
 identifier = "com.mycompany.myapp"
 # 版权信息
