feat(pack): unified icon config with auto format conversion

--- a/crates/auroraview-pack/Cargo.toml
+++ b/crates/auroraview-pack/Cargo.toml
@@ -62,6 +62,12 @@ base64 = "0.22"
 # Random number generation
 rand = "0.8"
 
+# Image processing (for icon conversion)
+image = "0.25"
+
+# ICO file format
+ico = "0.3"
+
 # Code protection (optional)
 aurora-protect = { path = "../aurora-protect", optional = true }
 
