--- a/examples/pack-example.toml
+++ b/examples/pack-example.toml
@@ -1,18 +1,20 @@
 # AuroraView 打包配置示例
 # ============================================================================
-# 此配置展示了三个用户需求的功能：
-#   1. 自定义 Windows 可执行文件图标 (.ico 格式)
+# 此配置展示了主要功能：
+#   1. 统一图标配置 - 支持 PNG/JPG/ICO，自动转换
 #   2. 禁用控制台黑框 (console = false)
-#   3. 自定义窗口标题栏/任务栏图标 (PNG 格式)
 #
-# 感谢用户反馈这些实用功能！
+# 图标自动转换说明：
+#   - 输入 PNG/JPG: 自动生成多分辨率 ICO (16-256px) 用于 Windows
+#   - 输入 ICO: 自动提取 PNG 用于窗口标题栏
+#   - 无需手动准备两种格式！
 # ============================================================================
 #
 # 使用方法:
 #   auroraview pack --config examples/pack-example.toml --build
 #
 # 或者通过命令行参数覆盖:
-#   auroraview pack --config examples/pack-example.toml --icon ./my-icon.ico --no-console --build
+#   auroraview pack --config examples/pack-example.toml --icon ./my-icon.png --no-console --build
 
 # ============================================================================
 # 包信息
@@ -20,7 +22,7 @@
 [package]
 name = "my-awesome-app"
 version = "1.0.0"
-description = "我的应用程序 - 展示自定义图标和禁用黑框功能"
+description = "我的应用程序 - 展示统一图标配置和禁用黑框功能"
 authors = ["Your Name <your@email.com>"]
 license = "MIT"
 
@@ -56,21 +58,22 @@ start_position = "center"
 # 打包配置
 # ============================================================================
 [bundle]
-# 应用图标（PNG 格式，用于非 Windows 平台）
-icon = "./assets/my-app-icon.png"
-
 # ┌─────────────────────────────────────────────────────────────────────────┐
-# │ 功能 3: 自定义窗口图标（标题栏/任务栏图标）                              │
+# │ 统一图标配置（★ 简化后只需要这一个配置 ★）                               │
 # │                                                                         │
-# │ 说明: 设置应用运行时窗口标题栏和任务栏显示的图标                         │
-# │ 格式: 必须是 PNG 格式                                                   │
-# │ 推荐尺寸: 32x32 或 64x64 像素                                           │
+# │ 支持格式: PNG, JPG, ICO                                                 │
+# │ 推荐: 使用 256x256 或更大的 PNG 图片                                    │
 # │                                                                         │
-# │ 注意: 这与 Windows .ico 图标不同！                                      │
-# │   - window_icon: 运行时窗口标题栏/任务栏图标 (PNG)                      │
-# │   - [bundle.windows].icon: Windows 资源管理器中显示的图标 (ICO)         │
+# │ 自动转换:                                                               │
+# │   - PNG/JPG → 多分辨率 ICO (16/24/32/48/64/128/256px)                  │
+# │   - ICO → PNG (提取最大尺寸图像)                                        │
+# │                                                                         │
+# │ 用途:                                                                   │
+# │   - Windows 可执行文件图标 (资源管理器中显示)                            │
+# │   - 窗口标题栏图标                                                      │
+# │   - 任务栏图标                                                          │
 # └─────────────────────────────────────────────────────────────────────────┘
-window_icon = "./assets/my-app-icon.png"
+icon = "./assets/my-app-icon.png"
 
 # 应用标识符
 identifier = "com.mycompany.myapp"
@@ -84,27 +87,11 @@ short_description = "一个很棒的应用"
 resources = []
 
 # ============================================================================
-# ★★★ Windows 特定配置 - 用户需求功能 ★★★
+# Windows 特定配置
 # ============================================================================
 [bundle.windows]
 # ┌─────────────────────────────────────────────────────────────────────────┐
-# │ 功能 1: 自定义 Windows 图标                                              │
-# │                                                                         │
-# │ 说明: 设置 Windows 可执行文件 (.exe) 的图标                              │
-# │ 格式: 必须是 .ico 格式（Windows 图标格式）                               │
-# │ 路径: 相对于此配置文件的路径，或绝对路径                                  │
-# │                                                                         │
-# │ 创建 .ico 文件的方法:                                                   │
-# │   - 在线工具: https://convertio.co/png-ico/                             │
-# │   - 或使用 ImageMagick: convert icon.png -define icon:auto-resize icon.ico│
-# │   - 推荐尺寸: 256x256, 128x128, 64x64, 48x48, 32x32, 16x16              │
-# └─────────────────────────────────────────────────────────────────────────┘
-icon = "./assets/my-app-icon.ico"
-
-# ┌─────────────────────────────────────────────────────────────────────────┐
-# │ 功能 2: 禁用控制台黑框                                                   │
-# │                                                                         │
-# │ 说明: 控制打包后的应用是否显示命令行窗口（黑框）                          │
+# │ 禁用控制台黑框                                                          │
 # │                                                                         │
 # │ console = false  -> GUI 应用模式（默认）                                │
 # │                     不显示控制台窗口，适合正式发布                        │
@@ -118,6 +105,10 @@ icon = "./assets/my-app-icon.ico"
 # │   --no-console  强制隐藏控制台                                          │
 # └─────────────────────────────────────────────────────────────────────────┘
 console = false
+
+# 可选：覆盖统一图标，使用特定的 ICO 文件
+# 如果不设置，会自动从 [bundle].icon 生成
+# icon = "./assets/my-app-icon.ico"
 
 # 可选：Windows 版本信息（显示在文件属性 -> 详细信息中）
 file_version = "1.0.0.0"
