--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,13 +9,13 @@ on:
     branches:
       - main
     paths:
-      - 'website/**'
+      - 'docs/**'
       - '.github/workflows/docs.yml'
   pull_request:
     branches:
       - main
     paths:
-      - 'website/**'
+      - 'docs/**'
       - '.github/workflows/docs.yml'
   workflow_dispatch:
 
@@ -46,30 +46,30 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        working-directory: website
+        working-directory: docs
         run: npm install
 
       - name: Copy logo
         run: |
-          mkdir -p website/public
-          cp assets/icons/auroraview-logo-text.png website/public/logo.png || echo "Logo not found, using placeholder"
+          mkdir -p docs/public
+          cp assets/icons/auroraview-logo-text.png docs/public/logo.png || echo "Logo not found, using placeholder"
 
       - name: Build documentation
-        working-directory: website
+        working-directory: docs
         run: npm run build
 
       - name: Upload artifact for deployment
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: actions/upload-pages-artifact@v3
         with:
-          path: website/.vitepress/dist
+          path: docs/.vitepress/dist
 
       - name: Upload artifact for PR preview
         if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: docs-preview-${{ github.event.pull_request.number }}
-          path: website/.vitepress/dist
+          path: docs/.vitepress/dist
           retention-days: 7
 
   # Deploy to GitHub Pages (only on main)
