--- a/crates/auroraview-core/Cargo.toml
+++ b/crates/auroraview-core/Cargo.toml
@@ -18,6 +18,9 @@ path = "src/lib.rs"
 # Plugin system
 auroraview-plugins = { path = "../auroraview-plugins" }
 
+# Signal system (Qt-style signals/slots)
+aurora-signals = { path = "../aurora-signals" }
+
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
