--- a/.github/workflows/build-gallery.yml
+++ b/.github/workflows/build-gallery.yml
@@ -161,7 +161,8 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev libxdo-dev
+          # Install both dev and runtime libraries
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libwebkit2gtk-4.1-0 libgtk-3-dev libgtk-3-0 libayatana-appindicator3-dev libxdo-dev
 
       - name: Build SDK first (Gallery depends on it)
         shell: bash
@@ -204,6 +205,8 @@ jobs:
               --config gallery/auroraview.pack.toml \
               --output-dir target/pack
           else
+            # Ensure system libraries are in LD_LIBRARY_PATH
+            export LD_LIBRARY_PATH="/usr/lib/x86_64-linux-gnu:${LD_LIBRARY_PATH:-}"
             ./target/${{ matrix.target }}/release/auroraview-cli pack \
               --config gallery/auroraview.pack.toml \
               --output-dir target/pack
