--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -944,7 +944,8 @@ jobs:
         if: needs.cli-build.result == 'skipped' && runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev libxdo-dev
+          # Install both dev and runtime libraries
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libwebkit2gtk-4.1-0 libgtk-3-dev libgtk-3-0 libayatana-appindicator3-dev libxdo-dev
 
       - name: Cache Rust (fallback)
         if: needs.cli-build.result == 'skipped'
@@ -991,6 +992,10 @@ jobs:
       - name: Pack Gallery (generate executable)
         shell: bash
         run: |
+          # Ensure system libraries are in LD_LIBRARY_PATH on Linux
+          if [[ "${{ runner.os }}" == "Linux" ]]; then
+            export LD_LIBRARY_PATH="/usr/lib/x86_64-linux-gnu:${LD_LIBRARY_PATH:-}"
+          fi
           ./target/${{ matrix.target }}/release/auroraview-cli${{ matrix.exe-ext }} pack \
             --config gallery/auroraview.pack.toml \
             --output-dir target/pack
